# adaptive-snowsampler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall
.github/workflows/: build_test.yml  check_style.yml
Tools/: configure.sh
adaptive_snowsampler/: CMakeLists.txt  package.xml  requirements.txt
adaptive_snowsampler/include/adaptive_snowsampler/: adaptive_snowsampler.h  visualization.h
adaptive_snowsampler/launch/: launch.xml  launch_nuc.xml  replay_bag.launch  run.launch  run_rosbag.launch  sitl_run.launch
adaptive_snowsampler/resources/: Braemabuehl_upper_1m.tif  Braemabuehl_upper_1m_color.tif  braemabuel_1m_crop.tif  braemabuel_1m_crop_color.tif  braemabuel_2m_crop.tif  braemabuel_2m_crop_color.tif  eth_zentrum.tif  eth_zentrum_color.tif  flueelatal.tif  flueelatal_color.tif  hinwil.tif  hinwil_color.tif  hoenggerberg_3m.tif  hoenggerberg_3m_color.tif  prodkamm_1m.tif  prodkamm_1m_color.tif  prodkamm_1m_crop.tif  prodkamm_1m_crop_color.tif  prodkamm_3m.tif  prodkamm_3m_color.tif  riemenstalden_2m.tif  riemenstalden_2m_color.tif  riemenstalden_3m.tif  riemenstalden_3m_color.tif  snowsampler.stl  snowsampler_legs.stl  spilau_all_3m.tif  spilau_all_3m_color.tif  splauhuetten_1m_crop.tif  splauhuetten_1m_crop_color.tif  splauhuetten_2m_crop.tif  splauhuetten_2m_crop_color.tif
adaptive_snowsampler/rviz/: config.rviz
adaptive_snowsampler/scripts/: lac.py  log_replay.py  snowsampler_lac.py
adaptive_snowsampler/src/: adaptive_snowsampler.cpp  main.cpp
adaptive_snowsampler/worlds/: prodkamm_1m_crop.world
rviz/: config.rviz
snowsampler_msgs/: CMakeLists.txt  package.xml
snowsampler_msgs/srv/: GetPosition.srv  SetAngle.srv  SetMaxSpeed.srv  SetMeasurementDepth.srv  TakeMeasurement.srv  Trigger.srv
snowsampler_rviz/: CMakeLists.txt  package.xml  plugin_description.xml  plugins_description.xml
snowsampler_rviz/include/snowsampler_rviz/: edit_button.h  goal_marker.h  planning_interactive_markers.h  planning_panel.h  pose_widget.h
snowsampler_rviz/launch/: config.rviz  replay.rviz  run.launch  run_rviz.xml  rviz.launch.py
snowsampler_rviz/src/: edit_button.cpp  goal_marker.cpp  planning_interactive_markers.cpp  planning_panel.cpp  pose_widget.cpp  standalone_test.cpp
src/: adaptive_snowsampler.cpp  main.cpp
ssp_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
ssp_bridge/include/ssp_bridge/: ssp_bridge.h
ssp_bridge/launch/: launch.xml  ssp_bridge.launch
ssp_bridge/params/: params.yaml
ssp_bridge/src/: ssp_bridge.cpp  ssp_bridge_node.cpp
ssp_bridge/src/ssp_bridge/: ssp_bridge.py
systemd/: adaptive-snowsampler.service  configure.sh  environment.conf  mavlink-router.service  mavlinkrouter.config  microxrce_agent.service  rosbag-record.service  run_controller.sh  run_record.sh  run_ssp_bridge.sh  run_system_monitor.sh  ssp-bridge.service  system-monitor.service
