<package>
  <name>adaptive_snowsampler</name>
  <version>0.0.0</version>
  <description>Package for autonomous adpative snow sampling</description>
  <maintainer email="jalim@ethz.ch">jaeyoung</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>grid_map_geo</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>snowsampler_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <export>
  </export>
</package>
