<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snowsampler_msgs</name>
  <version>0.0.2</version>
  <description>
   snowsampler_msgs includes the definition for custom services for the <a href="https://github.com/Jaeyoung-Lim/adaptive-snowsampler"> adaptive-snowsampler</a> package.
  </description>

  <maintainer email="jalim@student.ethz.ch">Jaeyoung Lim</maintainer>
  <author email="chiesc@ethz.ch">Claudio Chies</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <!-- XXX needed for users of mavlink_convert.h
  <build_export_depend>libmavconn</build_export_depend>
  -->

  <export>
    <architecture_independent/>
  </export>
</package>
