<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snowsampler_rviz</name>
  <version>0.0.0</version>
  <description>Planning plugin for RVIZ.</description>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>grid_map_geo_msgs</build_depend>
  
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>snowsampler_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_geo</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
