<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ssp_bridge</name>
  <version>0.1.1</version>
  <description>a Package to handle the communication between the Snowsmpler and SSP</description>
  <maintainer email="chiesc@ethz.ch">Claudio Chies</maintainer>
  <license>BSD-3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>snowsampler_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>snowsampler_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>snowsampler_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
